hphp/hack/test/typecheck/tconst/invalid_access_root.php
<?hh

class C<T> {
  /* HH_FIXME[4124] */
  const T::Const x = 0;
}
